--- a/TP2_420_514.ipynb
+++ b/TP2_420_514.ipynb
@@ -74,7 +74,7 @@
         "Il faut charger la base de données MongoDB dans un cluster créé avec votre compte _Atlas_. Les informations de connection sont comme les suivantes:\n",
         "\n",
         "* user : 420-514_A24\n",
-        "* password : Str0ng_P@ssw0rd_420-514\n",
+        "* password : Str0ng_Passw0rd_420-514\n",
         "* database : sample_training\n",
         "* host : 420-514-tp2.g8hmr.mongodb.net\n",
         "* collections : companies, grades, inspections et zips\n",
